--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <link rel="icon" type="image/svg+xml" href="/img/portfolio.svg" />
+  <title>Portfolio </title>
   <!-- CSS Files -->
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/skins/color-1.css" />
@@ -37,13 +38,13 @@
           <a href="#home" class="active"><i class="fa fa-home"></i>Home</a>
         </li>
         <li>
-          <a href="#about"><i class="fa fa-user"></i>About</a>
+          <a href="#about"><i class="fa fa-user"></i>Sobre Mi</a>
         </li>
         <li>
-          <a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a>
+          <a href="#portfolio"><i class="fa fa-briefcase"></i>Portafolio</a>
         </li>
         <li>
-          <a href="#contact"><i class="fa fa-comments"></i>Contact</a>
+          <a href="#contact"><i class="fa fa-comments"></i>Contacto</a>
         </li>
       </ul>
     </div>
@@ -56,23 +57,23 @@
           <div class="row">
             <div class="home-info padd-15">
               <h3 class="hello">
-                Hello, my name is
+                Hola, mi nombre es
                 <span class="name">Luis Carlos Rangel </span>
               </h3>
               <h3 class="my-profession">
-                I'm a <span class="typing">Software Engineer</span>
+                Soy un <span class="typing">Ingeniero de Software</span>
               </h3>
               <p>
-                I'm a web designer with experience for over 1 year. My
-                expertise is to create and website design using HTML, CSS,
-                Javascript, React.js
+                Soy diseñador web con experiencia de más de 1 año. Mi
+                 experiencia es crear y diseñar sitios web usando HTML, CSS,
+                 Javascript, React.js
               </p>
-              <a href="./resources/Curriculim CV Desarrollador Front-End.pdf" class="btn" target="_blank">Download CV</a>
+              <a href="./resources/Curriculim CV Desarrollador Front-End.pdf" class="btn" target="_blank">Descargar CV</a>
             </div>
             <div class="home-img padd-15">
               <img src="./img/perfil.jpg" alt="" />
               <h1 class="card-name">Luis C. Rangel</h1>
-              <h2 class="card-dev">Front-End Developer</h2>
+              <h2 class="card-dev">Desarrollador Front-End</h2>
               <div class="redes">
                 <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -90,26 +91,26 @@
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
-              <h2>About Me</h2>
+              <h2>Sobre Mi</h2>
             </div>
           </div>
           <div class="row">
             <div class="about-content padd-15">
               <div class="row">
                 <div class="about-text padd-15">
-                  <h3>I'm Luis Carlos Rangel <span>Web Developer</span></h3>
+                  <h3>Soy Luis Carlos Rangel <span>Web Developer</span></h3>
                   <p>
-                    Hello, my name is Luis Carlos Rangel and I am a freelance
-                    developer with 1 year of experience in Front-End web
-                    development using technologies such as React.js,
-                    Javascript, CSS, HTML. Although I am an independent
-                    developer,
-                    <span class="about-span">I don't have any problem to working with your
-                      company,</span>
-                    In addition to my experience as a Front-End web developer,
-                    I have knowledge in computer maintenance, installation of
-                    operating systems and frameworks, Most of my experience
-                    was obtained by working as a person freelance
+                    Hola mi nombre es Luis Carlos Rangel y soy freelance
+                    desarrollador con 1 año de experiencia en Front-End web
+                    desarrollo utilizando tecnologías como React.js,
+                    JavaScript, CSS, HTML. aunque soy independiente
+                    desarrollador,
+                    <span class="about-span">No tengo ningún problema para trabajar con su
+                      compañía,</span>
+                      Además de mi experiencia como desarrollador web Front-End,
+                      Tengo conocimiento en mantenimiento de computadoras, instalación de
+                      sistemas operativos y redes, la mayor parte de mi experiencia
+                      la obtuve trabajando como desarrollador freelance.
                   </p>
                 </div>
               </div>
@@ -117,38 +118,38 @@
                 <div class="personal-info padd-15">
                   <div class="row">
                     <div class="info-item">
-                      <p>Birthday : <span>May 19</span></p>
+                      <p>Cumpleaños : <span>19 Mayo</span></p>
                     </div>
                     <div class="info-item">
-                      <p>Age : <span>30</span></p>
+                      <p>Edad : <span>31 años</span></p>
                     </div>
                     <div class="info-item">
                       <p>Email : <span>Luiscrangel19@gmail.com</span></p>
                     </div>
                     <div class="info-item">
-                      <p>Degree : <span>Computer Science</span></p>
+                      <p>Educacion  : <span>Ingeniero de Software</span></p>
                     </div>
                     <div class="info-item">
-                      <p>Phone : <span>+57 302 288 6564</span></p>
+                      <p>Telefono : <span>+57 302 288 6564</span></p>
                     </div>
                     <div class="info-item">
-                      <p>Nationality : <span>Colombian</span></p>
+                      <p>Nacionalidad : <span>Colombiano</span></p>
                     </div>
                     <div class="info-item">
-                      <p>City : <span>Magangué - Bolívar</span></p>
+                      <p>Ciudad : <span>Magangué - Bolívar</span></p>
                     </div>
                     <div class="info-item">
-                      <p>Freelance : <span>Available</span></p>
+                      <p>Freelance : <span>Disponible</span></p>
                     </div>
                   </div>
                   <div class="row btn-cv">
                     <div class="buttons padd-15">                      
-                        <a href="#contact" class="btn hire-me" data-section-index="1">Hire Me</a>
+                        <a href="#contact" class="btn hire-me" data-section-index="1">Contratame</a>
                     </div>
                   </div>
                 </div>
                 <div class="section-title padd-15">
-                  <h2>Skills</h2>
+                  <h2>Habilidades</h2>
                 </div>
                 <section class="section-tech">
                   <div class="contenedor__tarjetas">
@@ -211,10 +212,10 @@
         <div class="container">
           <div class="row ">
             <div class="section-title padd-15">
-              <h2>Portfolio</h2>
+              <h2>Portafolio</h2>
             </div>
             <div class="portfolio-heading padd-15">
-              <h2> My Projects</h2>
+              <h2> Mis Proyectos</h2>
             </div>
           </div>
           <div class="row port-row">
@@ -223,10 +224,9 @@
               <div class="portfolio-item-inner shadow dark">
                 <div class="portfolio-img">
                   <img src="./img/quotes.png" alt="">
-                  <p class="padd-15">web application that handles the most famous quotes from iconic characters, these
-                    will appear in a random order by pressing the next button.</p>
+                  <p class="padd-15">divertida aplicación de las galletas de la fortuna creadas en react, en esta app web aparecerán algunas citas de las galletas de la fortuna en un orden aleatorio al presionar el boton ver todo .</p>
                   <div class="btn-portfolio">
-                    <a href="https://random-card-lcrs.netlify.app/" class="btn" target="_blank">Deploy</a>
+                    <a href="https://fortune-cookies-lcrs.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
                   </div>
                 </div>
               </div>
@@ -235,10 +235,9 @@
               <div class="portfolio-item-inner shadow dark">
                 <div class="portfolio-img">
                   <img src="./img/wheater-api.png" alt="">
-                  <p class="padd-15">This web application asks the user for location permissions to show the current
-                    temperature, it also has the option to see the temperature in Fahrenheit degrees.</p>
+                  <p class="padd-15">Esta aplicación web le pide al usuario permisos de ubicación para mostrar la temperatura actual del lugar donde se encuentre la persona , también tiene la opción de ver la temperatura en grados Fahrenheit.</p>
                   <div class="btn-portfolio">
-                    <a href="https://wheater-app-luis.netlify.app/" class="btn" target="_blank">Deploy</a>
+                    <a href="https://wheater-app-luis.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
                   </div>
                 </div>
               </div>
@@ -247,11 +246,9 @@
               <div class="portfolio-item-inner shadow dark">
                 <div class="portfolio-img">
                   <img src="./img/poke-api.png" alt="">
-                  <p class="padd-15">Web application that asks the user to place their name so that they can enter the
-                    pokedex in which they will obtain all the information on the pokemon animated series, here they can
-                    search for them by their names and filter them by type.</p>
+                  <p class="padd-15">Aplicación web que le pide al usuario que coloque su nombre para que ingrese al pokedex en el cual obtendrá toda la información de la serie animada de pokemon, aquí podrá buscarlos por su nombre y filtrarlos por tipo.</p>
                   <div class="btn-portfolio">
-                    <a href="https://poke-api-lcr.netlify.app/" class="btn" target="_blank">Deploy</a>
+                    <a href="https://poke-api-lcr.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
                   </div>
                 </div>
               </div>
@@ -260,11 +257,9 @@
               <div class="portfolio-item-inner shadow dark">
                 <div class="portfolio-img">
                   <img src="./img/rick-and-morthy.png" alt="">
-                  <p class="padd-15">Web application about Rick and Morty which allows us to know all its characters,
-                    the status of these characters and the different universes where they reside, we can also search for
-                    all 126 universes that exist in this animated series.</p>
+                  <p class="padd-15">Aplicación web sobre Rick and Morty la cual nos permite conocer todos sus personajes, el estado de estos personajes y los diferentes universos donde residen, también podemos buscar los 126 universos que existen en esta serie animada.</p>
                   <div class="btn-portfolio">
-                    <a href="https://rick-and-morty-react-lcrs.netlify.app/" class="btn" target="_blank">Deploy</a>
+                    <a href="https://rick-and-morty-react-lcrs.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
                   </div>
                 </div>
               </div>
@@ -278,25 +273,25 @@
         <div class="container">
           <div class="row ">
             <div class="section-title padd-15">
-              <h2>Contact Me</h2>
+              <h2>Contactame</h2>
             </div>
           </div>
           <h3 class="contact-title padd-15">
-            Have You Any Questions ?
+            Tienes Alguna Pregunta o Duda ?
           </h3>
           <h4 class="contact-sub-title padd-15">
-            I'M AT YOUR SERVICES
+            ESTOY A TUS SERVICIOS
           </h4>
           <div class="row">
             <!-- Contact Info Item Start -->
            <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa fa-phone"></i></div>
-            <h4>Call Me</h4>
+            <h4>Llamame</h4>
             <p>+57 302 288 6564</p>
            </div>
            <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-            <h4>Office</h4>
+            <h4>Ubicación</h4>
             <p>Magangué - Bolívar</p>
            </div>
            <div class="contact-info-item padd-15">
@@ -307,21 +302,21 @@
            <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa-brands fa-linkedin fa"></i></div>
             <h4>Linkedin</h4>
-            <a href="https://www.linkedin.com/in/luis-carlos-rangel-641512249/" target="_blank">Click Here!</a>
+            <a href="https://www.linkedin.com/in/luis-carlos-rangel-641512249/" target="_blank">Clickea Aqui!</a>
            </div>
             <!-- Contact Info Item End -->
           </div>
           <h3 class="contact-title padd-15">
-           SEND ME AN EMAIL</h3>
+           ENVIAME UN EMAIL</h3>
           <h4 class="contact-sub-title padd-15">
-            I'M VERY RESPONSIVE TO MENSSAGES</h4>
+            ESTOY ATENTO A TUS MENSAJES</h4>
             <!-- Contact Form  -->
             <div class="row">
               <div class="contact-form padd-15">
                 <div class="row">
                   <div class="form-item col-6 padd-15">
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Name">
+                      <input type="text" class="form-control" placeholder="Nombre">
                     </div>
                   </div>
                   <div class="form-item col-6 padd-15">
@@ -333,20 +328,20 @@
                 <div class="row">
                   <div class="form-item col-12 padd-15">
                     <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Subject">
+                      <input type="text" class="form-control" placeholder="Sujeto">
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-item col-12 padd-15">
                     <div class="form-group">
-                      <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                      <textarea name="" class="form-control" id="" placeholder="Escribe tu mensaje aqui"></textarea>
                     </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-item col-12 padd-15">
-                    <button type="submit" class="btn">Send Message</button>
+                    <button type="submit" class="btn">Enviar Mensaje</button>
                   </div>
                 </div>
               </div>
