--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
             <div class="portfolio-item padd-15">
               <div class="portfolio-item-inner shadow dark">
                 <div class="portfolio-img">
-                  <img src="./img/quotes.png" alt="">
-                  <p class="padd-15">divertida aplicación de las galletas de la fortuna creadas en react, en esta app web aparecerán algunas citas de las galletas de la fortuna en un orden aleatorio al presionar el boton ver todo .</p>
+                  <img src="./img/rick-and-morthy.png" alt="">
+                  <p class="padd-15">Aplicación web sobre Rick and Morty la cual nos permite conocer todos sus personajes, el estado de estos personajes y los diferentes universos donde residen, también podemos buscar los 126 universos que existen en esta serie animada.</p>
                   <div class="btn-portfolio">
                     <a href="https://fortune-cookies-lcrs.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
                   </div>
