--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
             <div class="portfolio-item padd-15">
               <div class="portfolio-item-inner shadow dark">
                 <div class="portfolio-img">
-                  <img src="./img/rick-and-morthy.png" alt="">
-                  <p class="padd-15">Aplicación web sobre Rick and Morty la cual nos permite conocer todos sus personajes, el estado de estos personajes y los diferentes universos donde residen, también podemos buscar los 126 universos que existen en esta serie animada.</p>
+                  <img src="./img/crud-api.png" alt="">
+                  <p class="padd-15">Crud App, en esta aplicacion podemos crear, actualizar y borrar usuarios. Esta aplicacion fue creada consumiendo una api mediante la libreria React.js</p>
                   <div class="btn-portfolio">
-                    <a href="https://fortune-cookies-lcrs.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
+                    <a href="https://react-crud-user-app.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
                   </div>
                 </div>
               </div>
@@ -267,8 +267,8 @@
             <div class="portfolio-item padd-15">
               <div class="portfolio-item-inner shadow dark">
                 <div class="portfolio-img">
-                  <img src="./img/crud-api.png" alt="">
-                  <p class="padd-15">Crud App, en esta aplicacion podemos crear, actualizar y borrar usuarios. Esta aplicacion fue creada consumiendo una api mediante la libreria React.js</p>
+                  <img src="./img/rick-and-morthy.png" alt="">
+                  <p class="padd-15">Aplicación web sobre Rick and Morty la cual nos permite conocer todos sus personajes, el estado de estos personajes y los diferentes universos donde residen, también podemos buscar los 126 universos que existen en esta serie animada.</p>
                   <div class="btn-portfolio">
                     <a href="https://rick-and-morty-react-lcrs.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
                   </div>
