--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled/>
   <link rel="stylesheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled/>
   <link rel="stylesheet" href="css/skins/color-3.css" class="alternate-style" title="color-3" disabled/>
-  <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled/>
-  <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled/>
+  <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled/>  
 <link rel="stylesheet" href="css/style-switcher.css">
 </head>
 
@@ -269,6 +268,17 @@
                   <p class="padd-15">Aplicación web sobre Rick and Morty la cual nos permite conocer todos sus personajes, el estado de estos personajes y los diferentes universos donde residen, también podemos buscar los 126 universos que existen en esta serie animada.</p>
                   <div class="btn-portfolio">
                     <a href="https://rick-and-morty-ap-lcrs.netlify.app/" class="btn" target="_blank">Ver Proyecto</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow dark">
+                <div class="portfolio-img">
+                  <img src="./img/p6.png" alt="">
+                  <p class="padd-15">Juego de azar BLackjack, este fue creado usando vanilla javascript con vite y fue maquetado usando bootstrap.</p>
+                  <div class="btn-portfolio">
+                    <a href="https://luiscrangel.github.io/Blackjack-vite/" class="btn" target="_blank">Ver Proyecto</a>
                   </div>
                 </div>
               </div>
