--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               </p>
               <a href="./resources/CV-Luis-Frontend.pdf" class="btn" target="_blank">Descargar CV</a>
             </div>
-            <div class="home-img padd-15">
+            <!-- <div class="home-img padd-15">
               <img src="./img/perfil.jpg" alt="" />
               <h1 class="card-name">Luis C. Rangel</h1>
               <h2 class="card-dev">Desarrollador Front-End</h2>
@@ -77,7 +77,7 @@
                 <a href="https://wa.link/163u3a" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="https://github.com/LuisCRangel" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/luis-carlos-rangel-641512249/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>               
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
                       <p>Cumpleaños : <span>19 Mayo</span></p>
                     </div>
                     <div class="info-item">
-                      <p>Edad : <span>31 años</span></p>
+                      <p>Edad : <span>32 años</span></p>
                     </div>
                     <div class="info-item">
                       <p>Email : <span>Luiscrangel19@gmail.com</span></p>
@@ -133,7 +133,7 @@
                       <p>Nacionalidad : <span>Colombiano</span></p>
                     </div>
                     <div class="info-item">
-                      <p>Ciudad : <span>Magangué - Bolívar</span></p>
+                      <p>Ciudad : <span>Bogota DC</span></p>
                     </div>
                     <div class="info-item">
                       <p>Freelance : <span>Disponible</span></p>
