--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
               </p>
               <a href="./resources/CV-Luis-Frontend.pdf" class="btn" target="_blank">Descargar CV</a>
             </div>
-            <!-- <div class="home-img padd-15">
-              <img src="./img/perfil.jpg" alt="" />
+            <div class="home-img padd-15">
+              <img src="./img/profile.png" alt="" />
               <h1 class="card-name">Luis C. Rangel</h1>
               <h2 class="card-dev">Desarrollador Front-End</h2>
               <div class="redes">
                 <a href="https://wa.link/163u3a" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="https://github.com/LuisCRangel" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/luis-carlos-rangel-641512249/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>               
-              </div> -->
+              </div>
             </div>
           </div>
         </div>
