home movil fixed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="home-info padd-15">
               <h3 class="hello">
                 Hola, mi nombre es
-                <span class="name">Luis Carlos Rangel </span>
+                <span class="name">Luis Carlos Rangel. </span>
               </h3>
               <h3 class="my-profession">
                 Soy un <span class="typing">Ingeniero de Software</span>
